<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zete Mezszám</string>
    <string name="titlePrefs">Beállítások</string>
    <string name="titleManualSync">Szinkronizálás</string>
    <string name="titleStartSync">Szinkronizálás induláskor</string>
    <string name="titlePlayerList">Játékosok</string>
    <string name="titleSeasonList">Szezonok</string>
    <string name="titleShirtList">Mezszámok</string>
    <string name="updateFail">Adatbázisfrissítés sikertelen</string>
    <string name="updateObsolete">Elavult programverzió.</string>
    <string name="updateSuccess">Adatbázis frissítve</string>
    <string name="updateUnknown">Ismeretlen hiba adatbázisfrissítés közben</string>
    <string name="summaryStartSync">Mezszámfrissítés letöltése a program indításakor</string>
    <string name="playerPhoto">Játékos fényképe</string>
    <string name="send_ztedb_updated_notifications_permission_label">Sends ZTEDB Notifications</string>
    <string name="send_ztedb_updated_notifications_permission_description">Allow this application to send ZTEDB
    notifications to other applications</string>
    <string name="receive_ztedb_updated_notifications_permission_label">Receive ZTEDB Notifications</string>
    <string name="receive_ztedb_updated_notifications_permission_description">Allow this application to receive ZTEDB
    notifications from other applications</string>
</resources>
