<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/itemPrefs"
    android:title="@string/titlePrefs"
    android:icon="@android:drawable/ic_menu_preferences"
    app:showAsAction="never">
    </item>
  <item android:title="@string/titleManualSync"
    android:id="@+id/itemManualSync"
    android:icon="@android:drawable/ic_menu_rotate"
      app:showAsAction="never"/>
  <item android:title="@string/titlePlayerList"
    android:id="@+id/itemPlayerList"
    android:icon="@drawable/player_list"
      app:showAsAction="never"/>
  <item android:title="@string/titleSeasonList"
    android:id="@+id/itemSeasonList"
    android:icon="@drawable/calendar"
      app:showAsAction="never"/>
  <item android:title="@string/titleShirtList"
    android:id="@+id/itemShirtList"
    android:icon="@drawable/shirt"
      app:showAsAction="never"/>
</menu>

